changing word list

--- a/word_works.ipynb
+++ b/word_works.ipynb
@@ -103,48 +103,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>purge</td>\n",
-       "      <td>p</td>\n",
-       "      <td>u</td>\n",
-       "      <td>r</td>\n",
-       "      <td>g</td>\n",
+       "      <td>edict</td>\n",
        "      <td>e</td>\n",
+       "      <td>d</td>\n",
+       "      <td>i</td>\n",
+       "      <td>c</td>\n",
+       "      <td>t</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>until</td>\n",
-       "      <td>u</td>\n",
-       "      <td>n</td>\n",
-       "      <td>t</td>\n",
-       "      <td>i</td>\n",
+       "      <td>alive</td>\n",
+       "      <td>a</td>\n",
        "      <td>l</td>\n",
+       "      <td>i</td>\n",
+       "      <td>v</td>\n",
+       "      <td>e</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>gulch</td>\n",
-       "      <td>g</td>\n",
-       "      <td>u</td>\n",
-       "      <td>l</td>\n",
-       "      <td>c</td>\n",
-       "      <td>h</td>\n",
+       "      <td>boson</td>\n",
+       "      <td>b</td>\n",
+       "      <td>o</td>\n",
+       "      <td>s</td>\n",
+       "      <td>o</td>\n",
+       "      <td>n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>borax</td>\n",
-       "      <td>b</td>\n",
-       "      <td>o</td>\n",
+       "      <td>crony</td>\n",
+       "      <td>c</td>\n",
        "      <td>r</td>\n",
-       "      <td>a</td>\n",
-       "      <td>x</td>\n",
+       "      <td>o</td>\n",
+       "      <td>n</td>\n",
+       "      <td>y</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>solar</td>\n",
-       "      <td>s</td>\n",
-       "      <td>o</td>\n",
+       "      <td>labia</td>\n",
        "      <td>l</td>\n",
        "      <td>a</td>\n",
-       "      <td>r</td>\n",
+       "      <td>b</td>\n",
+       "      <td>i</td>\n",
+       "      <td>a</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -152,11 +152,11 @@
       ],
       "text/plain": [
        "   words first second third fourth fifth\n",
-       "0  purge     p      u     r      g     e\n",
-       "1  until     u      n     t      i     l\n",
-       "2  gulch     g      u     l      c     h\n",
-       "3  borax     b      o     r      a     x\n",
-       "4  solar     s      o     l      a     r"
+       "0  edict     e      d     i      c     t\n",
+       "1  alive     a      l     i      v     e\n",
+       "2  boson     b      o     s      o     n\n",
+       "3  crony     c      r     o      n     y\n",
+       "4  labia     l      a     b      i     a"
       ]
      },
      "execution_count": 6,
@@ -389,28 +389,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>purge</td>\n",
-       "      <td>1108.0</td>\n",
+       "      <td>edict</td>\n",
+       "      <td>784.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>until</td>\n",
-       "      <td>588.0</td>\n",
+       "      <td>alive</td>\n",
+       "      <td>1150.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>gulch</td>\n",
-       "      <td>785.0</td>\n",
+       "      <td>boson</td>\n",
+       "      <td>879.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>borax</td>\n",
-       "      <td>911.0</td>\n",
+       "      <td>crony</td>\n",
+       "      <td>1308.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>solar</td>\n",
-       "      <td>1178.0</td>\n",
+       "      <td>labia</td>\n",
+       "      <td>764.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -418,11 +418,11 @@
       ],
       "text/plain": [
        "    word   value\n",
-       "0  purge  1108.0\n",
-       "1  until   588.0\n",
-       "2  gulch   785.0\n",
-       "3  borax   911.0\n",
-       "4  solar  1178.0"
+       "0  edict   784.0\n",
+       "1  alive  1150.0\n",
+       "2  boson   879.0\n",
+       "3  crony  1308.0\n",
+       "4  labia   764.0"
       ]
      },
      "execution_count": 15,
@@ -494,29 +494,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>purge</td>\n",
-       "      <td>1108.0</td>\n",
+       "      <th>1</th>\n",
+       "      <td>alive</td>\n",
+       "      <td>1150.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>gulch</td>\n",
-       "      <td>785.0</td>\n",
+       "      <td>boson</td>\n",
+       "      <td>879.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>borax</td>\n",
-       "      <td>911.0</td>\n",
+       "      <td>crony</td>\n",
+       "      <td>1308.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>solar</td>\n",
-       "      <td>1178.0</td>\n",
+       "      <td>labia</td>\n",
+       "      <td>764.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>elbow</td>\n",
-       "      <td>496.0</td>\n",
+       "      <td>gourd</td>\n",
+       "      <td>906.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -524,29 +524,29 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2462</th>\n",
+       "      <td>gouge</td>\n",
+       "      <td>1165.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2464</th>\n",
+       "      <td>found</td>\n",
+       "      <td>917.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2465</th>\n",
-       "      <td>gland</td>\n",
-       "      <td>970.0</td>\n",
+       "      <td>virus</td>\n",
+       "      <td>586.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2466</th>\n",
-       "      <td>whiff</td>\n",
-       "      <td>583.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2467</th>\n",
-       "      <td>waxen</td>\n",
-       "      <td>834.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2468</th>\n",
-       "      <td>verge</td>\n",
-       "      <td>1046.0</td>\n",
+       "      <td>shelf</td>\n",
+       "      <td>944.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2469</th>\n",
-       "      <td>sough</td>\n",
-       "      <td>1126.0</td>\n",
+       "      <td>navel</td>\n",
+       "      <td>862.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -555,17 +555,17 @@
       ],
       "text/plain": [
        "       word   value\n",
-       "0     purge  1108.0\n",
-       "2     gulch   785.0\n",
-       "3     borax   911.0\n",
-       "4     solar  1178.0\n",
-       "5     elbow   496.0\n",
+       "1     alive  1150.0\n",
+       "2     boson   879.0\n",
+       "3     crony  1308.0\n",
+       "4     labia   764.0\n",
+       "5     gourd   906.0\n",
        "...     ...     ...\n",
-       "2465  gland   970.0\n",
-       "2466  whiff   583.0\n",
-       "2467  waxen   834.0\n",
-       "2468  verge  1046.0\n",
-       "2469  sough  1126.0\n",
+       "2462  gouge  1165.0\n",
+       "2464  found   917.0\n",
+       "2465  virus   586.0\n",
+       "2466  shelf   944.0\n",
+       "2469  navel   862.0\n",
        "\n",
        "[1741 rows x 2 columns]"
       ]
@@ -638,29 +638,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>dingy</td>\n",
-       "      <td>922.0</td>\n",
+       "      <th>3</th>\n",
+       "      <td>crony</td>\n",
+       "      <td>1308.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>wormy</td>\n",
-       "      <td>1025.0</td>\n",
+       "      <th>5</th>\n",
+       "      <td>gourd</td>\n",
+       "      <td>906.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>corny</td>\n",
-       "      <td>1282.0</td>\n",
+       "      <th>13</th>\n",
+       "      <td>munch</td>\n",
+       "      <td>803.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>dough</td>\n",
-       "      <td>834.0</td>\n",
+       "      <th>38</th>\n",
+       "      <td>grind</td>\n",
+       "      <td>954.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89</th>\n",
-       "      <td>buxom</td>\n",
-       "      <td>614.0</td>\n",
+       "      <th>39</th>\n",
+       "      <td>ruddy</td>\n",
+       "      <td>817.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -668,29 +668,29 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2427</th>\n",
-       "      <td>myrrh</td>\n",
-       "      <td>681.0</td>\n",
+       "      <th>2414</th>\n",
+       "      <td>quirk</td>\n",
+       "      <td>799.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2429</th>\n",
-       "      <td>privy</td>\n",
-       "      <td>1112.0</td>\n",
+       "      <th>2425</th>\n",
+       "      <td>mummy</td>\n",
+       "      <td>843.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2433</th>\n",
-       "      <td>wound</td>\n",
-       "      <td>868.0</td>\n",
+       "      <th>2448</th>\n",
+       "      <td>brink</td>\n",
+       "      <td>1040.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2440</th>\n",
-       "      <td>chunk</td>\n",
-       "      <td>873.0</td>\n",
+       "      <th>2450</th>\n",
+       "      <td>bongo</td>\n",
+       "      <td>816.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2466</th>\n",
-       "      <td>whiff</td>\n",
-       "      <td>583.0</td>\n",
+       "      <th>2464</th>\n",
+       "      <td>found</td>\n",
+       "      <td>917.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -699,17 +699,17 @@
       ],
       "text/plain": [
        "       word   value\n",
-       "7     dingy   922.0\n",
-       "8     wormy  1025.0\n",
-       "15    corny  1282.0\n",
-       "66    dough   834.0\n",
-       "89    buxom   614.0\n",
+       "3     crony  1308.0\n",
+       "5     gourd   906.0\n",
+       "13    munch   803.0\n",
+       "38    grind   954.0\n",
+       "39    ruddy   817.0\n",
        "...     ...     ...\n",
-       "2427  myrrh   681.0\n",
-       "2429  privy  1112.0\n",
-       "2433  wound   868.0\n",
-       "2440  chunk   873.0\n",
-       "2466  whiff   583.0\n",
+       "2414  quirk   799.0\n",
+       "2425  mummy   843.0\n",
+       "2448  brink  1040.0\n",
+       "2450  bongo   816.0\n",
+       "2464  found   917.0\n",
        "\n",
        "[238 rows x 2 columns]"
       ]
@@ -797,44 +797,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "strongest suggestions\n",
-      "       word   value\n",
-      "2115  slate  1569.0\n",
-      "1501  share  1549.0\n",
-      "1642  sauce  1542.0\n",
-      "initial guess\n",
-      "1\n",
-      "from the results of the last guess\n",
-      "next best option is crony\n",
-      "your top remaiing options are: \n",
-      "       word   value\n",
-      "1565  crony  1308.0\n",
-      "2147  briny  1296.0\n",
-      "15    corny  1282.0\n",
-      "2\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [26]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mround\u001b[39m \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m     20\u001b[0m     not_char \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124menter eliminated letters:[l,e,t,t,e,r]\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 21\u001b[0m     is_char \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43menter confirmed letters:[y,e,s]\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m     loc_letters \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124menter confirmed locations: [letter,location]\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     24\u001b[0m     \u001b[38;5;66;03m# eliminate options, and show the reduced best 5 choices\u001b[39;00m\n",
-      "File \u001b[0;32m~/.local/share/virtualenvs/wordletron2000-9JAwi6tr/lib/python3.10/site-packages/ipykernel/kernelbase.py:1044\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1040\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_allow_stdin:\n\u001b[1;32m   1041\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(\n\u001b[1;32m   1042\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1043\u001b[0m     )\n\u001b[0;32m-> 1044\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1045\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1046\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1047\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1048\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m   1049\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/share/virtualenvs/wordletron2000-9JAwi6tr/lib/python3.10/site-packages/ipykernel/kernelbase.py:1089\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1086\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m   1087\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m   1088\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[0;32m-> 1089\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m   1090\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[1;32m   1091\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# make the testing loop\n",
     "# starting DF df_word_ranks\n",
@@ -844,8 +809,9 @@
     "\n",
     "print('strongest suggestions')\n",
     "print(df_options.nlargest(3, 'value'))\n",
+    "go = 'go'\n",
     "\n",
-    "while round <= 6:\n",
+    "while go != 'no':\n",
     "    round += 1 \n",
     "    if round == 1:\n",
     "\n",
@@ -881,8 +847,11 @@
     "            print(df_options.nlargest(3, 'value'))\n",
     "        except:\n",
     "            print('e message')\n",
+    "            print(df_options.head())\n",
     "            pass\n",
-    "\n",
+    "    \n",
+    "        go = input('go again?:')\n",
+    "    # go = input('go again?:')\n",
     "    print(str(round))\n"
    ]
   },
@@ -891,7 +860,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#  this can be improved by confiming the number of letters in a word, 'wince' has one E and this was confirmed\n",
+    "# use this to elimate more from the pool when the information is availible"
+   ]
   }
  ],
  "metadata": {
