adding output csvs
running checks for single matches, and exact matches based, and saving the results to an output file

--- a/check_all_solution_v_guesses.ipynb
+++ b/check_all_solution_v_guesses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "2315"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -34837,7 +34837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -34846,7 +34846,7 @@
        "749"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34857,7 +34857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34870,7 +34870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34879,7 +34879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -34946,7 +34946,7 @@
        "4  naval    True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34957,7 +34957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34970,7 +34970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -35061,7 +35061,7 @@
        "4  awake     a      w     a      k     e"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35072,7 +35072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -35081,7 +35081,7 @@
        "False"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35092,7 +35092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35101,7 +35101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35112,7 +35112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35132,7 +35132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -35146,7 +35146,7 @@
        "Name: first, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35157,7 +35157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -35242,7 +35242,7 @@
        "e   72.0     242    177   318.0  424.0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35253,7 +35253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -35262,7 +35262,7 @@
        "141.0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35273,7 +35273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35284,7 +35284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35297,7 +35297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -35364,7 +35364,7 @@
        "4  awake   971.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35375,7 +35375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35385,7 +35385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35394,7 +35394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -35467,7 +35467,7 @@
        "4  awake   971.0   True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35478,7 +35478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -35505,7 +35505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -35636,7 +35636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35645,7 +35645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -35763,7 +35763,7 @@
        "[221 rows x 3 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35779,7 +35779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -35798,7 +35798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35811,7 +35811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35824,7 +35824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35837,7 +35837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35850,7 +35850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35859,7 +35859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -35877,7 +35877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -35903,7 +35903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -35983,7 +35983,7 @@
        "3  scres    4.0  cleat"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36006,7 +36006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -36057,10 +36057,203 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>guess</th>\n",
+       "      <th>score</th>\n",
+       "      <th>answer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>slate</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>cigar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>slate</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>rebut</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>slate</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>sissy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>slate</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>humph</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>slate</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>awake</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   guess  score answer\n",
+       "0  slate    1.0  cigar\n",
+       "1  slate    2.0  rebut\n",
+       "2  slate    3.0  sissy\n",
+       "3  slate    0.0  humph\n",
+       "4  slate    5.5  awake"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_geuss_value.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   guess  score answer\n",
+      "0  shave    1.0  cigar\n",
+      "1  shave    1.0  rebut\n",
+      "2  shave    3.0  sissy\n",
+      "3  shave    2.0  humph\n",
+      "4  shave    5.5  awake\n"
+     ]
+    }
+   ],
+   "source": [
+    "# now try this for all words\n",
+    "# calcuating potential eliminations for each starting word and each potential answer\n",
+    "# solution = ['write','fight','soyet','cleat']\n",
+    "\n",
+    "guess = ''\n",
+    "\n",
+    "for guess in solutions:\n",
+    "\n",
+    "    df_geuss_value = pd.DataFrame({'guess': [],'score':[], 'answer':[]})\n",
+    "\n",
+    "    for idx, word in enumerate(solutions):\n",
+    "        score = 0\n",
+    "        # print(word)\n",
+    "        for letter in guess:\n",
+    "    # match of letter\n",
+    "    # give one point\n",
+    "            # print(f' for the guess {guess}, and the answer {word} the score for letter: {letter} is {word.count(letter)}')\n",
+    "            score += int(word.count(letter))\n",
+    "        if word.count(letter) >=1:\n",
+    "            for i in range(0,4):\n",
+    "    # find character match in locations\n",
+    "                char = guess[i]\n",
+    "                if guess[i]==word[i]:\n",
+    "                    # print(f'exact char match on letter {char} in positions {i}')\n",
+    "                    score += 2.5\n",
+    "        \n",
+    "        df_geuss_value.loc[idx, 'guess'] = guess\n",
+    "        df_geuss_value.loc[idx, 'score'] = score\n",
+    "        df_geuss_value.loc[idx, 'answer'] = word\n",
+    "\n",
+    "# print(df_geuss_value.head())\n",
+    "# df_geuss_value.to_csv('guess_value_iterations')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# now try this for all words in the guesses table vs all the potential solutions\n",
+    "# calcuating potential eliminations for each starting word and each potential answer\n",
+    "# solution = ['write','fight','soyet','cleat']\n",
+    "\n",
+    "guess = ''\n",
+    "\n",
+    "for guess in solutions:\n",
+    "# for guess in guesses:\n",
+    "\n",
+    "    df_geuss_value = pd.DataFrame({'guess':[],'score_match':[], 'answer':[], 'score_exact_match':[]})\n",
+    "\n",
+    "    for idx, word in enumerate(solutions):\n",
+    "        score = 0\n",
+    "        score_exact = 0\n",
+    "        # print(word)\n",
+    "        for letter in guess:\n",
+    "    # match of letter\n",
+    "    # give one point\n",
+    "            # print(f' for the guess {guess}, and the answer {word} the score for letter: {letter} is {word.count(letter)}')\n",
+    "            score += int(word.count(letter))\n",
+    "        if word.count(letter) >=1:\n",
+    "            for i in range(0,4):\n",
+    "    # find character match in locations\n",
+    "                char = guess[i]\n",
+    "                if guess[i]==word[i]:\n",
+    "                    # print(f'exact char match on letter {char} in positions {i}')\n",
+    "                    score_exact += 1\n",
+    "        \n",
+    "        df_geuss_value.loc[idx, 'guess'] = guess\n",
+    "        df_geuss_value.loc[idx, 'score_match'] = score\n",
+    "        df_geuss_value.loc[idx, 'answer'] = word\n",
+    "        df_geuss_value.loc[idx, 'score_exact_match'] = word\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   guess  score answer\n",
+      "0  neals    1.0  cigar\n",
+      "1  neals    1.0  rebut\n",
+      "2  neals    3.0  sissy\n",
+      "3  neals    0.0  humph\n",
+      "4  neals    3.0  awake\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_geuss_value.head())\n",
+    "df_geuss_value.to_csv('guess_value_iterations_guesses')"
+   ]
   },
   {
    "cell_type": "code",
