--- a/check_all_solution_v_guesses.ipynb
+++ b/check_all_solution_v_guesses.ipynb
@@ -36141,60 +36141,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   guess  score answer\n",
-      "0  shave    1.0  cigar\n",
-      "1  shave    1.0  rebut\n",
-      "2  shave    3.0  sissy\n",
-      "3  shave    2.0  humph\n",
-      "4  shave    5.5  awake\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# now try this for all words\n",
-    "# calcuating potential eliminations for each starting word and each potential answer\n",
-    "# solution = ['write','fight','soyet','cleat']\n",
-    "\n",
-    "guess = ''\n",
-    "\n",
-    "for guess in solutions:\n",
-    "\n",
-    "    df_geuss_value = pd.DataFrame({'guess': [],'score':[], 'answer':[]})\n",
-    "\n",
-    "    for idx, word in enumerate(solutions):\n",
-    "        score = 0\n",
-    "        # print(word)\n",
-    "        for letter in guess:\n",
-    "    # match of letter\n",
-    "    # give one point\n",
-    "            # print(f' for the guess {guess}, and the answer {word} the score for letter: {letter} is {word.count(letter)}')\n",
-    "            score += int(word.count(letter))\n",
-    "        if word.count(letter) >=1:\n",
-    "            for i in range(0,4):\n",
-    "    # find character match in locations\n",
-    "                char = guess[i]\n",
-    "                if guess[i]==word[i]:\n",
-    "                    # print(f'exact char match on letter {char} in positions {i}')\n",
-    "                    score += 2.5\n",
-    "        \n",
-    "        df_geuss_value.loc[idx, 'guess'] = guess\n",
-    "        df_geuss_value.loc[idx, 'score'] = score\n",
-    "        df_geuss_value.loc[idx, 'answer'] = word\n",
-    "\n",
-    "# print(df_geuss_value.head())\n",
-    "# df_geuss_value.to_csv('guess_value_iterations')"
+    "from ipyparallel import Client\n",
+    "rc = Client()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rc.ids\n",
+    "\n",
+    "[0, 1, 2, 3]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[stdout:2] Process 2241143.\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[stdout:0] Process 2241139.\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[stdout:1] Process 2241141.\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[stdout:3] Process 2241149.\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%px\n",
+    "import os\n",
+    "print(f\"Process {os.getpid():d}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36204,7 +36231,7 @@
     "\n",
     "guess = ''\n",
     "\n",
-    "for guess in solutions:\n",
+    "for guess in solutions[0:50]:\n",
     "# for guess in guesses:\n",
     "\n",
     "    df_geuss_value = pd.DataFrame({'guess':[],'score_match':[], 'answer':[], 'score_exact_match':[]})\n",
@@ -36229,27 +36256,14 @@
     "        df_geuss_value.loc[idx, 'guess'] = guess\n",
     "        df_geuss_value.loc[idx, 'score_match'] = score\n",
     "        df_geuss_value.loc[idx, 'answer'] = word\n",
-    "        df_geuss_value.loc[idx, 'score_exact_match'] = word\n"
+    "        df_geuss_value.loc[idx, 'score_exact_match'] = score_exact\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   guess  score answer\n",
-      "0  neals    1.0  cigar\n",
-      "1  neals    1.0  rebut\n",
-      "2  neals    3.0  sissy\n",
-      "3  neals    0.0  humph\n",
-      "4  neals    3.0  awake\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(df_geuss_value.head())\n",
     "df_geuss_value.to_csv('guess_value_iterations_guesses')"
